fixed wrapping of semester-div

--- a/assets/style.css
+++ b/assets/style.css
@@ -68,7 +68,7 @@ main {
 }
 
 .title hr {
-    width: 88%;
+    width: 87%;
 }
 
 .spacer {
